# bdnr-proyecto-final

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  queries.py
article/: final-article.bib  final-article.tex
data/: all-works-open-ales.csv  extracted_names.json
demo/: demo.py
demo/pages/: communities.py
plantillaInforme/: plantillaInforme.tex
research/: 20250524_colibri_data_processing.py  20250601_obtained_title.py  20250608_people.py  20250608_works.py  20250609_dblp_data.py  20250622_openalex_data.py  20250623_centrality.py  20250623_comunnity.py  name_analysis.py  name_matching.py
src/udelar_graph/: __init__.py  cli.py  models.py  repository.py
src/udelar_graph/extraction/: cli.py  colibri.py
src/udelar_graph/load/: colibri.py  openalex.py
src/udelar_graph/processing/: names.py  works.py
